<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- APIS -->
    <string name="facebook_app_id">903137443064438</string>

    <string name="app_name">LearnHut</string>
    <string name="title_activity_sign_on">SignOnActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="refresh">Refresh</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>

    <string name="test_feeds">Feeds</string>
    <string name="test_notes">Notes</string>
    <string name="test_people">People</string>
    <string name="test_listing">Listings</string>


    <string name="user_name">Name</string>
    <string name="user_username">Username (Email id)</string>
    <string name="institute_name">College or School</string>
    <string name="email_id">Email - ID</string>
    <string name="interests">Interests</string>
    <string name="submit">Submit</string>
    <string name="upload">Upload</string>
    <string name="enter_name">Please Enter Name</string>
    <string name="enter_password">Please Enter password</string>
    <string name="enter_institute">Please Enter Institute</string>
    <string name="enter_email">Please enter an email address</string>
    <string name="enter_qualifications">Please enter qualification</string>
    <string name="enter_interest">Enter your interest</string>
    <string name="empty_interests">empty interests</string>
    <string name="hello_blank_fragment">Settings</string>


    <string name="sign_in_with">Sign In With</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_guest"><u>Continue as guest</u></string>
    <string name="qualifications">Qualifications</string>
    <string name="enter_here">Enter here</string>
    <string name="edit_info">Edit Info</string>
    <string name="set_location">Set Location</string>

    <string name="notes_search">Search</string>
    <string name="notes_topic_name">Topic Name</string>
    <string name="notes_branch_name">Branch Name</string>
    <string name="notes_subject_name">Subject Name</string>
    <string name="enter_topic_name">Please enter the Topic Name</string>
    <string name="enter_subject_name">Please enter the Subject Name</string>
    <string name="enter_branch_name">Please enter the Branch Name</string>

    <!-- Feed -->
    <string name="feed_category_interests">Your Interests</string>
    <string name="feed_category_college">Your College</string>
    <string name="feed_category_around">Your Locality</string>
    <string name="feed_search_hint">Search</string>
    <string name="user_password">Password</string>
    <string name="sign_in_reset">Reset</string>
    <string name="sign_in_submit">Submit</string>

    <!-- Signon -->
    <string name="user_dob">Date of Birth</string>
    <string name="user_location">Location</string>
    <string name="notes_upload_details">Details:</string>
    <string name="notes_uploadedby">Uploaded By:</string>
    <string name="notes_gallery_pick_image">Pick From Gallery</string>
    <string name="notes_gallery_pick_multiple_pictures">Pick Multiple Pictures</string>

    <!-- Events -->
    <string name="event_name">Name</string>
    <string name="event_description">Description</string>
    <string name="event_location">Location</string>
    <string name="event_date">Date</string>
    <string name="event_created">Event created</string>
    <string name="placeholder_dialog_events">You haven\'t created an event yet!</string>
    <string name="create_facebook_event">Create Fb Event</string>

    <string name="user_uid">UserID</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="old_password">Old Password</string>
    <string name="password">Password</string>
    <string name="notes_files_selected">Images Selected</string>
    <string name="notes_files_not_selected">No File Selected</string>

    <!-- Listings -->
    <string name="upload_complete">Upload complete</string>
    <string name="listings_uploading">Uploading</string>
    <string name="listings_downloading">Downloading...</string>
    <string name="listings_details">Details:</string>
    <string name="dialog_download_starting">Download Start</string>
    <string name="placeholder_dialog_listing">You haven\'t posted an item to sell yet!</string>
    <string name="lets_get_going">lets get going</string>

    <!-- Notes -->
    <string name="notes_fragment_title_search">Get Notes</string>
    <string name="notes_fragment_title_upload">Upload Notes</string>

</resources>
