<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="in.tosc.studddin.fragments.signon.SignupDataFragment">

    <ScrollView
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical"
        android:scrollbars="horizontal">

        <LinearLayout
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:scrollbars="horizontal">

            <EditText
                android:id="@+id/user_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/user_name"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/user_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/user_password"
                android:inputType="textWebPassword"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/user_dob"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/user_dob"
                android:inputType="date"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/user_institute"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/institute_name"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/user_location"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/user_location"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/user_email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/email_id"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/user_qualifications"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/qualifications"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/user_interests"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/interests"
                android:textAlignment="center" />

        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_height="0dp">
        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:hint="@string/submit" />
        </RelativeLayout>



</LinearLayout>
