<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/notes_upload_container"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="in.tosc.studddin.fragments.notes.NotesUploadFragment">

    <!-- TODO: Update blank fragment layout -->


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center">

        <Button
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:id="@+id/notes_attach"
            android:background="@drawable/attachpin"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="65dp" />

        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/notes_topic"
            android:hint="@string/notes_topic_name"
            android:layout_marginTop="50dp"
            android:layout_below="@+id/notes_attach"
            android:layout_centerHorizontal="true" />

        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/notes_subject"
            android:hint="@string/notes_subject_name"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/notes_topic"
            android:layout_centerHorizontal="true" />

        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/notes_branch"
            android:layout_marginTop="20dp"
            android:hint = "@string/notes_branch_name"
            android:layout_below="@+id/notes_subject"
            android:layout_centerHorizontal="true" />


    </RelativeLayout>
</FrameLayout>
