<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="in.tosc.studddin.fragments.signon.SignOnFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical"
        android:weightSum="4">

        <View
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="2" />


        <EditText
            android:id="@+id/sign_in_user_name"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:hint="@string/user_username"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/sign_in_user_password"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:hint="@string/user_password"
            android:inputType="textWebPassword"
            android:textAlignment="center" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/signon_button_signup"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/signin_button_margin"
            android:layout_marginRight="@dimen/signin_button_margin"
            android:layout_weight="2"
            android:text="@string/sign_up" />

        <Button
            android:id="@+id/signon_button_signin"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/signin_button_margin"
            android:layout_marginRight="@dimen/signin_button_margin"
            android:layout_weight="2"
            android:text="@string/sign_in" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/signon_button_facebook"
                android:layout_width="@dimen/signin_button_size"
                android:layout_height="@dimen/signin_button_size"
                android:layout_centerInParent="true"
                android:layout_margin="@dimen/signin_button_margin"
                android:background="@drawable/facebook" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/signon_button_twitter"
                android:layout_width="@dimen/signin_button_size"
                android:layout_height="@dimen/signin_button_size"
                android:layout_centerInParent="true"
                android:layout_margin="@dimen/signin_button_margin"
                android:background="@drawable/twitter" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:layout_centerInParent="true"
                android:id="@+id/signon_button_google"
                android:layout_width="@dimen/signin_button_size"
                android:layout_height="@dimen/signin_button_size"
                android:layout_margin="@dimen/signin_button_margin"
                android:background="@drawable/googleplus" />
        </RelativeLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/sign_in_guest"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/sign_in_guest"
            android:textColor="@color/signin_guest"
            android:textSize="15sp" />
    </LinearLayout>


</LinearLayout>
